[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "binance-timestamp-fix"
version = "1.0.0"
description = "Fix Binance Connector 'timestamp ahead' errors via time.time() monkey-patch"
readme = "README.md"
authors = [{name = "rredrey"}]
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://github.com/rredrey/binance-connector-timestamp-fix"
Repository = "https://github.com/rredrey/binance-connector-timestamp-fix"
